test/files/neg/implicit-shadow.check
implicit-shadow.scala:4: C.i2s is not a valid implicit value for Int(1) => ?{def isEmpty: ?} because:
it is imported twice in the same scope by
import C._
and import B._
	1.isEmpty
        ^
implicit-shadow.scala:4: error: value isEmpty is not a member of Int
	1.isEmpty
          ^
one error found
